--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "custom" # false (default), "google", "google-universal", "custom"
+  provider               :  "custom" # false (default), "google", "google-universal", "custom". Usando custom è poi possibile inserire il codice HTML di web analytics in _includes/analytics-providers/custom.html
   google:
     tracking_id          :
 
