--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jianyi Lin"
 title_separator          : "-"
 name                     : &name "Jianyi Lin"
-description              : &description "Assistant Professor at Khalifa University"
+description              : &description "Associate Professor at Unversità Cattolica del Sacro Cuore"
 url                      : https://giannilin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "giannilin.github.io" # impostare repository name in Settings a <propriousername>.github.io
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Jianyi Lin<br>林剑艺"
   avatar           : "Foto Github.png"
-  bio              : "Assistant Professor at Khalifa University"
-  location         : "Abu Dhabi, UAE"
+  bio              : "Associate Professor at Unversità Cattolica del Sacro Cuore"
+  location         : "Milan, Italy"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.it/citations?user=iY1DbaQAAAAJ"
-  email            : "NAME DOT SURNAME AT ku.ac.ae"
+  email            : "jianyi DOT lin AT unicatt.it"
   researchgate     : "https://www.researchgate.net/profile/Jianyi_Lin3" # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
