--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Jianyi Lin<br>林剑艺"
   avatar           : "Foto Github.png"
-  bio              : "Associate Professor<br>Theoretical Computer Science, Machine Learning, Artificial Ingelligence, Computational Mathematics"
+  bio              : "<b>Associate Professor</b><br><br>Theoretical Computer Science<br>Machine Learning<br>Artificial Ingelligence<br>Computational Mathematics"
   location         : "Milan, Italy"
-  employer         : "Università Cattolica del Sacro Cuore"
+  employer         : "<a href='https://www.unicatt.it'>Università Cattolica del Sacro Cuore</a>"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.it/citations?user=iY1DbaQAAAAJ"
   email            : "jianyi DOT lin AT unicatt.it"
