--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Foto Github.png"
   bio              : "<b>Associate Professor</b><br><br>Theoretical Computer Science<br>Machine Learning<br>Artificial Ingelligence<br>Computational Mathematics"
   location         : "Milan, Italy"
-  employer         : "<a href='https://www.unicatt.it'>Università Cattolica del Sacro Cuore</a>"
+  employer         : "<a href=https://www.unicatt.it>Università Cattolica del Sacro Cuore</a>"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.it/citations?user=iY1DbaQAAAAJ"
   email            : "jianyi DOT lin AT unicatt.it"
